--- a/index.html
+++ b/index.html
@@ -11,6 +11,79 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="" alt="">
+                <h1></h1>
+                <p></p>
+            </div>
+            <div class="socials">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </nav>
+        <hr>
+    </header>
+    <main>
+        <div class="title">
+            <h2></h2>
+            <p></p>
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <article>
+            <div class="article1">
+                <img src="" alt="">
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+            <div class="article2">
+                <form>
+                    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                    <label for="vehicle1"> I have a bike</label><br>
+                    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+                    <label for="vehicle2"> I have a car</label><br>
+                    <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+                    <label for="vehicle3"> I have a boat</label><br><br>
+                </form>
+            </div>
+
+
+        </article>
+        <hr>
+
+    </main>
+    <footer>
+        <div class="footer1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </div>
+
+        <div class="footer2">
+            <hr>
+            <img src="" alt="">
+            <hr>
+            <p></p>
+        </div>
+
+    </footer>
+
+
+
+
+
+
+
 
 </body>
 
