first part done

--- a/index.html
+++ b/index.html
@@ -14,31 +14,48 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="" alt="">
-                <h1></h1>
-                <p></p>
+                <img src="img/logo.png" alt="Logo">
+                <div class="logo_1">
+                    <h1>Delicious</h1>
+                    <p>THE BEST FOOD BLOG ON THE WEB</p>
+                </div>
+
             </div>
             <div class="socials">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <a href="#"> <img src="img/icon/fb-icon.png" alt=""> </a>
+                <a href="#"> <img src="img/icon/twit-icon.png" alt=""> </a>
+                <a href="#"><img src="img/icon/gp-icon.png" alt=""> </a>
+                <a href="#"><img src="img/icon/insta-icon.png" alt=""> </a>
+                <a href="#"><img src="img/icon/flic-icon.png" alt=""> </a>
+                <a href="#"><img src="img/icon/pint-icon.png" alt=""> </a>
+
+                <a href="#"><img src="img/icon/rss-icon.png" alt=""> </a>
+                <a href="#"> <img src="img/icon/mail-icon.png" alt=""></a>
             </div>
         </nav>
-        <hr>
+
     </header>
+    <hr>
+
     <main>
         <div class="title">
-            <h2></h2>
-            <p></p>
-            <img src="" alt="">
-            <p></p>
+            <div class="title1">
+                <h2>Chocolate Pizza</h2>
+                <p>POSTED ON 15 DEC 2013/ DESSERTS</p>
+            </div>
+
+            <div class="title2">
+                <div><img src="img/icon/print-icon.png" alt="">
+                    <p>PRINT</p>
+                </div>
+
+
+
+
+            </div>
+
         </div>
-        <article>
+        <!-- <article>
             <div class="article1">
                 <img src="" alt="">
                 <p></p>
@@ -55,13 +72,10 @@
                     <label for="vehicle3"> I have a boat</label><br><br>
                 </form>
             </div>
-
-
-        </article>
-        <hr>
-
+        </article> -->
+        <!-- <hr> -->
     </main>
-    <footer>
+    <!-- <footer>
         <div class="footer1">
             <img src="" alt="">
             <h3></h3>
@@ -76,15 +90,7 @@
             <p></p>
         </div>
 
-    </footer>
-
-
-
-
-
-
-
-
+    </footer> -->
 </body>
 
 </html>
