--- a/index.html
+++ b/index.html
@@ -55,31 +55,59 @@
             </div>
 
         </div>
-        <!-- <article>
+        <article>
             <div class="article1">
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <p></p>
+                <img src="./img/choco-pizza.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde, non esse itaque, enim iusto quis, quaerat eveniet est explicabo animi quos. Laborum modi qui placeat delectus culpa nostrum soluta.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde, non esse itaque, enim iusto quis, quaerat eveniet est explicabo animi quos. Laborum modi qui placeat delectus culpa nostrum soluta.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde, non esse itaque, enim iusto quis, quaerat eveniet est explicabo animi quos. Laborum modi qui placeat delectus culpa nostrum soluta.</p>
             </div>
-            <div class="article2">
+             <div class="article2">
                 <form>
-                    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-                    <label for="vehicle1"> I have a bike</label><br>
-                    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-                    <label for="vehicle2"> I have a car</label><br>
-                    <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-                    <label for="vehicle3"> I have a boat</label><br><br>
+                    <div class="article21">
+                    <input type="checkbox" id="a1" name="a1">
+                    <label for="a1"> 1 1/2 cups milk</label><br>
+                    <input type="checkbox" id="a2" name="a2">
+                    <label for="a2"> 1/2 cup mascapane</label><br>
+                    <input type="checkbox" id="a3" name="a3">
+                    <label for="a3"> 1/2 tsp pink salt</label><br>
+                    <input type="checkbox" id="a4" name="a4">
+                    <label for="a4"> 1 ib Black Mission Figs</label><br>
+                    <input type="checkbox" id="a5" name="a5">
+                    <label for="a5"> 1/2 cup brown sugar</label><br>
+                    <input type="checkbox" id="a6" name="a6">
+                    <label for="a6"> 2-4 tbsp water</label><br>
+                    </div>
+
+                    <div class="article22">
+                        <input type="checkbox" id="a7" name="a7">
+                        <label for="a7"> 1 1/2 cups heavy cream</label><br>
+                        <input type="checkbox" id="a8" name="a8">
+                        <label for="a8"> 1/3 granulated sugar</label><br>
+                        <input type="checkbox" id="a9" name="a9">
+                        <label for="a9"> 2 egg yolks</label><br>
+                        <input type="checkbox" id="a10" name="a10">
+                        <label for="a10"> 1 Lemom, juiced</label><br>
+                        <input type="checkbox" id="a11" name="a11">
+                        <label for="a11"> 2 tbsp butter</label><br>
+                        <input type="checkbox" id="a12" name="a12">
+                        <label for="a12"> 1 cup honey roasted pecans, roughly chopped</label><br>
+                    </div>
+                    
                 </form>
             </div>
-        </article> -->
-        <!-- <hr> -->
+        </article>  
+        
     </main>
-    <!-- <footer>
+     <!-- <footer>
+         <hr>
         <div class="footer1">
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
+            <img src="./img/van-pic.png" alt="">
+            <h3>Vanessa Stevenson </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quisquam ab dicta? Molestias quod autem iusto ea debitis laboriosam nam. Sint aut iusto laudantium rerum reprehenderit esse, sed quasi voluptate?
+            </p>
             <button></button>
         </div>
 
@@ -90,7 +118,7 @@
             <p></p>
         </div>
 
-    </footer> -->
+    </footer>  -->
 </body>
 
 </html>
