--- a/index.html
+++ b/index.html
@@ -101,24 +101,30 @@
         </article>  
         
     </main>
-     <!-- <footer>
+     <footer>
          <hr>
         <div class="footer1">
+           <div class="footer11">
             <img src="./img/van-pic.png" alt="">
             <h3>Vanessa Stevenson </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quisquam ab dicta? Molestias quod autem iusto ea debitis laboriosam nam. Sint aut iusto laudantium rerum reprehenderit esse, sed quasi voluptate?
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quisquam ab dicta? Molestias quod autem iusto ea debitis.
             </p>
-            <button></button>
+           </div>
+            <button>SHARE RECIPE</button>
         </div>
 
         <div class="footer2">
             <hr>
-            <img src="" alt="">
+           <div class="footer21">
+        
+            <img src="/img/small-logo.png" alt="">
             <hr>
-            <p></p>
+           </div>
+            <p>  Delicious &copy; 2013. All Rights Reserved</p>
+            <p> Proudly puplished with Ghost </p>
         </div>
 
-    </footer>  -->
+    </footer> 
 </body>
 
 </html>
