--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <article>
             <div class="article1">
-                <img src="./img/choco-pizza.png" alt="">
+                <img src="img/choco-pizza.png" alt="">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde, non esse itaque, enim iusto
                     quis, quaerat eveniet est explicabo animi quos. Laborum modi qui placeat delectus culpa nostrum
@@ -102,7 +102,7 @@
     <footer>
         <div class="footer1">
             <div class="footer11">
-                <img src="./img/van-pic.png" alt="">
+                <img src="img/van-pic.png" alt="">
                 <h3>Vanessa Stevenson </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quisquam ab dicta? Molestias quod
                     autem iusto ea debitis.
@@ -113,7 +113,7 @@
         <div class="footer2">
             <div class="footer21">
                 <hr>
-                <img src="/img/small-logo.png" alt="">
+                <img src=img/small-logo.png" alt="">
                 <hr>
             </div>
             <p> Delicious &copy; 2013. All Rights Reserved</p>
