Adding missing pics

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="footer2">
             <div class="footer21">
                 <hr>
-                <img src=img/small-logo.png" alt="">
+                <img src="img/small-logo.png" alt="">
                 <hr>
             </div>
             <p> Delicious &copy; 2013. All Rights Reserved</p>
