--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           
            <div class="footer21">
             <hr>
-            <img src="/img/small-logo.png" alt="">
+            <img src="./img/small-logo.png" alt="">
             <hr>
            </div>
             <p>  Delicious &copy; 2013. All Rights Reserved</p>
