complete lab-10 stretch goal (Make the checkboxes actually check using JS)

--- a/index.html
+++ b/index.html
@@ -64,35 +64,35 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde, non esse itaque, enim iusto quis, quaerat eveniet est explicabo animi quos. Laborum modi qui placeat delectus culpa nostrum soluta.</p>
             </div>
              <div class="article2">
-                <form>
+                <form id='form'>
                     <div class="article21">
                     <input type="checkbox" id="a1" name="a1">
-                    <label for="a1"> 1 1/2 cups milk</label><br>
+                    <label for="a1" id="a1"> 1 1/2 cups milk</label><br>
                     <input type="checkbox" id="a2" name="a2">
-                    <label for="a2"> 1/2 cup mascapane</label><br>
+                    <label for="a2" id="a2"> 1/2 cup mascapane</label><br>
                     <input type="checkbox" id="a3" name="a3">
-                    <label for="a3"> 1/2 tsp pink salt</label><br>
+                    <label for="a3" id="a3"> 1/2 tsp pink salt</label><br>
                     <input type="checkbox" id="a4" name="a4">
-                    <label for="a4"> 1 ib Black Mission Figs</label><br>
+                    <label for="a4"  id="a4"> 1 ib Black Mission Figs</label><br>
                     <input type="checkbox" id="a5" name="a5">
-                    <label for="a5"> 1/2 cup brown sugar</label><br>
+                    <label for="a5" id="a5"> 1/2 cup brown sugar</label><br>
                     <input type="checkbox" id="a6" name="a6">
-                    <label for="a6"> 2-4 tbsp water</label><br>
+                    <label for="a6" id="a6"> 2-4 tbsp water</label><br>
                     </div>
 
                     <div class="article22">
                         <input type="checkbox" id="a7" name="a7">
-                        <label for="a7"> 1 1/2 cups heavy cream</label><br>
+                        <label for="a7" id="a7"> 1 1/2 cups heavy cream</label><br>
                         <input type="checkbox" id="a8" name="a8">
-                        <label for="a8"> 1/3 granulated sugar</label><br>
+                        <label for="a8" id="a8"> 1/3 granulated sugar</label><br>
                         <input type="checkbox" id="a9" name="a9">
-                        <label for="a9"> 2 egg yolks</label><br>
+                        <label for="a9" id="a9"> 2 egg yolks</label><br>
                         <input type="checkbox" id="a10" name="a10">
-                        <label for="a10"> 1 Lemom, juiced</label><br>
+                        <label for="a10" id="a10"> 1 Lemom, juiced</label><br>
                         <input type="checkbox" id="a11" name="a11">
-                        <label for="a11"> 2 tbsp butter</label><br>
+                        <label for="a11" id="a11"> 2 tbsp butter</label><br>
                         <input type="checkbox" id="a12" name="a12">
-                        <label for="a12"> 1 cup honey roasted pecans, roughly chopped</label><br>
+                        <label for="a12" id="a12"> 1 cup honey roasted pecans, roughly chopped</label><br>
                     </div>
                     
                 </form>
@@ -123,8 +123,8 @@
             <p>  Delicious &copy; 2013. All Rights Reserved</p>
             <p> Proudly puplished with Ghost </p>
         </div>
-
     </footer> 
+    <script src='./js/app.js'></script>
 </body>
 
 </html>
